--- a/WATIGA.csproj
+++ b/WATIGA.csproj
@@ -7,6 +7,9 @@
 	<PropertyGroup>
 		
 	</PropertyGroup>
+	<ItemGroup>
+	  <Folder Include="TempArtFolder\New Experts\" />
+	</ItemGroup>
 
 	<!-- References -->
 
