update fishutils, add funky glitch effect to soul storage device, update soul storage device buff sprite and name, add spellweave scarf buff, tweak visuals of spellweave scarf orbitals

--- a/WATIGA.csproj
+++ b/WATIGA.csproj
@@ -8,6 +8,7 @@
 		
 	</PropertyGroup>
 	<ItemGroup>
+	  <Folder Include="Assets\Textures\" />
 	  <Folder Include="TempArtFolder\New Experts\" />
 	</ItemGroup>
 
